"elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.30.2]]
== 0.30.2 (28.02.2019)

icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.16 - This update addresses various locking and synchronization issues when clustering was enabled.

[[v0.30.1]]
== 0.30.1 (15.02.2019)

icon:plus[] GraphQL: nodes can now be loaded via a list of UUIDs.

icon:check[] Java Rest Client: Fixed a bug that occurred when calling `getResponse()` with `getBody()` on a binary response.

icon:check[] Java Rest Client: Fixed a bug in the MeshRestClient#isOneOf helper function.

[[v0.30.0]]
== 0.30.0 (12.02.2019)

CAUTION: Java Rest Client: The Gentics Mesh Java REST client which was based on Vert.x was replaced with a OkHttpClient implementation. Some changes to the client interface were necessary to make the client independent of Vert.x. See link:https://getmesh.io/docs/platforms/#_java[this example] and the Javadoc for more information.

icon:check[] Clustering: The mesh version will no longer be appended  to the node name used for OrientDB clustering. It is recommended to sanitize the `data/graphdb/storage/distributed-db-config.json` file and remove/rename entries which reference older mesh nodes. Only the active nodes should be listed in the file.

icon:check[] Core: Fixed a bug that caused too long responses on binary range requests.

icon:check[] GraphQL: Fixed a bug when loading a node via path. When the node itself did not exist, the query would return its parent node.

[[v0.29.10]]
== 0.29.10 (08.02.2019)

icon:check[] Clustering: Cluster stability has been increased by reducing concurrent transaction locks during delete requests.

[[v0.29.9]]
== 0.29.9 (07.02.2019)

icon:check[] Clustering: Cluster stability has been increased by reducing concurrent transaction locks during create/update requests.

[[v0.29.8]]
== 0.29.8 (05.02.2019)
