@@ -227,10 +227,13 @@ import_failed=Import fehlgeschlagen.
 
 backup_finished=Backup abgeschlossen.
 backup_failed=Backup fehlgeschlagen.
+backup_error_not_supported_in_memory_mode=Backup Operationen können nicht durchgeführt werden wenn der in-memory modus verwendet wird.
 
 restore_finished=Restore abgeschlossen.
 restore_failed=Restore fehlgeschlagen.
 restore_error_in_cluster_mode=Restore Operationen können nicht bei aktiviertem Clustering durchgeführt werden. Bitte führen Sie die Aktion auf einer Instanz ohne Clustering aus.
+restore_error_in_server_mode=Restore Operationen können derzeit nicht bei aktiviertem Graph Datenbank Server durchgeführt werden. Bitte führen Sie die Aktion auf einer Instanz ohne Graph Datenbank Server aus.
+restore_error_not_supported_in_memory_mode=Restore Operationen können nicht durchgeführt werden wenn der in-memory modus verwendet wird.
 
 search_index_batch_process_failed=Der Suchindex Batch konnte nicht erfolgreich abgearbeitet werden.
 search_admin_index_sync_invoked=Die Synchronisation des Suchindex wurde gestartet.
