@@ -225,10 +225,13 @@ import_failed=Import failed.
 
 backup_finished=Backup completed.
 backup_failed=Backup failed.
+backup_error_not_supported_in_memory_mode=Backup operation can not be run in memory mode.
 
 restore_finished=Restore completed.
 restore_failed=Restore failed.
 restore_error_in_cluster_mode=Restore operation can not be run in clustered mode. Please run restore in a non-clustered instance.
+restore_error_in_server_mode=Restore operation can not be run in server mode. Please run restore with disabled graph database server.
+restore_error_not_supported_in_memory_mode=Restore operation can not be run in memory mode.
 
 search_index_batch_process_failed=The search index batch failed to complete.
 search_admin_index_sync_invoked=The index sync process was started.
