@@ -1,5 +1,9 @@
 package com.gentics.mesh.graphdb.tx.impl;
 
+import java.io.IOException;
+
+import org.apache.commons.lang3.NotImplementedException;
+
 import com.gentics.mesh.etc.config.MeshOptions;
 import com.gentics.mesh.graphdb.tx.AbstractOrientStorage;
 import com.orientechnologies.orient.core.Orient;
@@ -10,15 +14,10 @@ import com.tinkerpop.blueprints.impls.orient.OrientGraph;
 import com.tinkerpop.blueprints.impls.orient.OrientGraphFactory;
 import com.tinkerpop.blueprints.impls.orient.OrientGraphNoTx;
 
-import io.vertx.core.logging.Logger;
-import io.vertx.core.logging.LoggerFactory;
-
 /**
  * Storage implementation which utilizes the server context to access the database.
  */
 public class OrientServerStorageImpl extends AbstractOrientStorage {
-
-	private static final Logger log = LoggerFactory.getLogger(OrientServerStorageImpl.class);
 
 	private OrientDB context;
 
@@ -46,38 +45,43 @@ public class OrientServerStorageImpl extends AbstractOrientStorage {
 
 	@Override
 	public OrientGraph rawTx() {
-		ODatabaseSession db = context.open(DB_NAME, "admin", "admin");
+		ODatabaseSession db = createSession();
 		return (OrientGraph) OrientGraphFactory.getTxGraphImplFactory().getGraph((ODatabaseDocumentInternal) db);
 	}
 
 	@Override
 	public OrientGraphNoTx rawNoTx() {
-		ODatabaseSession db = context.open(DB_NAME, "admin", "admin");
+		ODatabaseSession db = createSession();
 		return (OrientGraphNoTx) OrientGraphFactory.getNoTxGraphImplFactory().getGraph((ODatabaseDocumentInternal) db);
 	}
 
 	@Override
 	public void setMassInsertIntent() {
+		// NOOP
 	}
 
 	@Override
 	public void resetIntent() {
-	}
-
-	@Override
-	public void backup(String backupDirectory) {
-	}
-
-	@Override
-	public void restore(String backupFile) {
+		// NOOP
 	}
 
 	@Override
 	public void importGraph(String importFile) {
+		throw new NotImplementedException("Not supported in server mode");
 	}
 
 	@Override
 	public void exportGraph(String outputDirectory) {
+		throw new NotImplementedException("Not supported in server mode");
+	}
+
+	@Override
+	public void restore(String backupFile) throws IOException {
+		throw new NotImplementedException("Not supported in server mode");
+	}
+
+	public ODatabaseSession createSession() {
+		return context.open(DB_NAME, "admin", "admin");
 	}
 
 }
