@@ -29,6 +29,10 @@ title: Changelog
 
 icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.16 - This update addresses various locking and synchronization issues when clustering was enabled.
 
+icon:check[] Restore: The restore process has been reworked to avoid issues with graph database indices. Additional error handling has been added.
+
+icon:check[] Backup: Backup support for clustered mode has been added. The backup endpoint previously did not work as expected in clustered mode.
+
 [[v0.30.1]]
 == 0.30.1 (15.02.2019)
 
